# 3DPlot

./: CMakeLists.txt  README.md  config.txt  main.cpp
figures/: cube  fractal  sphere
shaders/: first.frag  second.frag
src_libs/: libs.h
src_libs/Camera/: CMakeLists.txt  Camera.cpp  Camera.h
src_libs/Config/: CMakeLists.txt  Config.cpp  Config.h
src_libs/Shader/: CMakeLists.txt  Shader.cpp  Shader.h
